# CineEscapeApp

./: .gitignore  CHANGELOG.md  README.md  codio.postman_environment.json  create_cineescape.sh  macOS.postman_environment.json
CineEscapeApp/: app.py  config.py  data_manager.py  models.py  pyproject.toml  requirements.txt  reset_db.py
CineEscapeApp/templates/: 400.html  404.html  500.html  base.html  index.html  macros.html  movies.html
CineEscapeApp/tests/: conftest.py  test_movies.py  test_users.py
